index site: put the header image into a div container to fix distortion with smaller screens, adjusted the responsive behavior

--- a/sass/indexResponsive.scss
+++ b/sass/indexResponsive.scss
@@ -5,12 +5,17 @@
       background-color: orange !important;
 
       #intro {
-        img {
+
+        #picture-container {
           display: none;
         }
 
         #headline {
           margin-bottom: -10px;
+        }
+
+        #header-text {
+          max-width: 100% !important;
         }
       }
     }
