--- a/sass/indexStyle.scss
+++ b/sass/indexStyle.scss
@@ -13,11 +13,17 @@ body {
       display: flex;
       justify-content: space-between;
 
-      img {
-        max-width: 50%;
+      #picture-container {
+        max-width: 100%;
+        //margin-right: 2em;
+
+        img {
+          max-width: 100%;
+        }
       }
 
       #header-text {
+        max-width: 50%;
         display: flex;
         margin-left: 2em;
         margin-right: 2em;
